--- a/frontend/BlogChain/about.html
+++ b/frontend/BlogChain/about.html
@@ -12,13 +12,19 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="index.html">BlogChain</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+    <nav class="navbar navbar-light bg-light navbar-expand-lg fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="https://cryptologos.cc/logos/near-protocol-near-logo.svg?v=014" alt="" width="60" height="60" class="">
+                <img src="assets/img/logo.svg" alt="" width="60" height="60" class="">BlogChain
+            </a>
+            <button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fa fa-bars"></i>
+            </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact us</a></li>
                     <li class="nav-item"><a class="nav-link" href="post.html">Blog Post</a></li>
                 </ul>
             </div>
@@ -30,7 +36,7 @@
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto position-relative">
                     <div class="site-heading">
-                        <h1>About Me</h1><span class="subheading">This is what I do</span>
+                        <h1>We are FreeSpeech</h1><span class="subheading text-black">We fight for the freedom of expression</span>
                     </div>
                 </div>
             </div>
